# nebusTest

./: .dockerignore  .env_example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: ci-cd.yaml
app/: application.py  exceptions.py  main.py  routes.py
app/api/: init_data_router.py
app/api/activity/: dao.py  router.py  schemas.py
app/api/auth/: dao.py  router.py  schemas.py  utils.py
app/api/building/: dao.py  router.py  schemas.py
app/api/default/: router.py
app/api/organization/: dao.py  router.py  schemas.py  shemas.py  utils.py
app/core/: logger_config.py  settings.py
app/dao/: base.py  database.py  session_maker.py
app/dependencies/: auth_dep.py  dao_dep.py
app/models/: __init__.py  activity.py  auth.py  building.py  organization.py  organization_activity.py
app/templates/: index.html
app/tests/: conftest.py
app/tests/shcemas/: test_organizations.py
app/tests/unit/: test_auth.py  test_default_router.py
docker/: app.sh
migration/: env.py
migration/versions/: 2025_01_22_0244-97c3a5b00a7d_add_models.py
migrations/versions/: 2025_01_22_0321-3b828a6e7559_add_models.py  2025_01_22_2018-c3652b025667_add_models.py  2025_01_27_0022-6d47811ec40d_add_auth.py
